--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="second-text">
         <h2>Location</h2>
         <h1><span>Where to find us</span></h1>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3585.425547527852!2d27.92515661440762!3d-26.019628862812493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e957627a90ba62f%3A0xf0680042bea8f491!2s1917%20Kenya%20Cres%2C%20Cosmo%20City%2C%20Roodepoort%2C%202188!5e0!3m2!1sen!2sza!4v1663962563441!5m2!1sen!2sza" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3585.425547527852!2d27.92515661440762!3d-26.019628862812493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e957627a90ba62f%3A0xf0680042bea8f491!2s1917%20Kenya%20Cres%2C%20Cosmo%20City%2C%20Roodepoort%2C%202188!5e0!3m2!1sen!2sza!4v1663962563441!5m2!1sen!2sza" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
    
 </div>
