--- a/Contact.html
+++ b/Contact.html
@@ -30,22 +30,26 @@
         </div> -->
         
     </header>
-<!-- background image -->
-
+    <!-- background image -->
     <div class="main-background">
         <div class="main-text">
-            <h2>The no.1 capentry</h2>
-        <h1><span> for your stunning Home </span></h1>
+        <h1><span> "Quality is not an act, but a habit"</span></h1>
+        <h2>With our help a house can simply turn into a home</h2>
         </div>
         
     </div> 
-    <!-- background image ended -->
+
 
     <div class="award-winning-hotel">
-        <h1>Stunning Work<span> Preview</span> </h1>
+        <h1>About <span> Us</span> </h1>
         <div class="main-hotel">
             <div class="inner-award">
                 <img id="contact_logo" src="img/LOGO.jpeg" style="display: block;margin-left: auto;margin-right: auto;width: 20%; border-radius: 50%;border: 1px solid black; " alt="">
+                <p>
+                    Tlou Bareku Projects is a capentry company based in Johannesburg. <br>
+                    We operate on all provinces and on the African 
+                    continent.  
+                </p>
                 <h1> Contact US </h1>
                 <div>
                     <p align="center"><i class="fas fa-envelope" ></i>  CKAphane@gmail.com</p>
