--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
         <div class="inner-award">
             <img id="showCase" src="img/PREV01.jpeg" alt="">
             <h2>Kitchen Units</h2>
-            <p>  
+            <p> A home is not complete without a unique, autistic and <br>
+                devine kitchen unit were every one will connect. 
             </p>
         </div>
         <div class="inner-award">
             <img id="showCase" src="img/PREV02.jpeg" alt="">
             <h2>Bathroom</h2>
-            <p> 
+            <p> The bathroom is considered to be a pillar of most homes <br>
+                and our intension is to make that pillar as strong as possible 
             </p>
     
         </div>
@@ -74,7 +76,8 @@
         <div class="inner-award">
             <img id="showCase" src="img/PREV14.jpeg" alt="">
             <h2>Wine cabinets</h2>
-            <p>
+            <p> We also design and build custom beverage carriers to <br>
+                store and organise neatly your set o drinks. 
             </p>
     
         </div>
@@ -82,8 +85,9 @@
         <div class="inner-award">
             <img id="showCase" src="img/PREV16.jpeg" alt="">
             <h2>Outdoor Furniture</h2>
-            <p>
-
+            <p> We do not only focus on creating domestic furnishings <br>
+                but exterior decor that can withstand all sorts of weather <br>
+                or disaster
             </p>
         </div>
 
