--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         </div>
         <div class="inner-award">
             <img id="showCase" src="img/PREV15.jpeg" alt="">
-            <h2>Closets</h2>
-            <p></p>
+            <h2>Closets And Cupboards</h2>
+            <p> Anything that we develop ranges from built-in to portable,<br> 
+                and flat to walk in. Everything is done according to your <br>
+                preferences. 
+            </p>
     
         </div>
 
