--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
                 <div>
                     <p align="center"><i class="fas fa-envelope" ></i>  CKAphane@gmail.com</p>
                     <p align="center"><i class="fas fa-phone-alt"></i>  078 355 9540</p>
-                    <p align="center"><i class="fas fa-thumbs-up"></i>  Tlou Bareku Projects</p>
+                    <p align="center"><i class="fa-brands fa-facebook"></i>  Tlou Bareku Projects</p>
                 </div>
             </div>
         </div>
